src/objects/SupervisorComments__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Supervisor_Mentor_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Supervisor_Mentor_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Supervisor Comments</label>
    <nameField>
        <displayFormat>-{000000}</displayFormat>
        <label>Supervisor Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supervisor Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>